ALB-Ingress-Controller-with-SSL/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-react-app-v1
spec:
  selector:
    app: my-react-app
    version: v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
